[package]
name = "git_tracker_rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "git_tracker_rs"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.37", features = ["derive"] }
colored = "3.0.0"
futures = "0.3.31"
git2 = "0.20.1"
humantime = "2.2.0"
humantime-serde = "1.1.1"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }

[dev-dependencies]
proptest = "1"
tempfile = "3"
